# Qt-Ref

./: tabdialog.rar
EmbedCTK/: EmbedCTK.pro  main.cpp
FontDownLoad/: FontMange.cpp  FontMange.h
HelloCtk/: CMakeLists.txt
IconItemTest/: TAwesomeIcon.qml  TIcon.qml  TSVGIcon.qml  main.cpp  main.qml  qml.qrc
MovingText/: MovingText.pro  TextMovingWidget.cpp  TextMovingWidget.h  mainwindow.cpp  翻滚字幕、走马灯.md
OpenGL/Day1/: triangle.cpp  triangle.h
QCustomPlot/qcustomplot/examples/monitorchart/: monitorchart.cpp  monitorchart.h  monitorchart.ui
QFontComboBox_Test/: QFontComboBox_Test.pro  README.md  mainwindow.cpp  ttffiletransform.cpp  ttffiletransform.h
QtPluginDemo/: QtPluginDemo.pro
QtPluginDemo/PluginDemo/: echointerface.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtPluginDemo/plugin/: CustomWidget.cpp  CustomWidget.h  CustomWidgetCollection.cpp  CustomWidgetCollection.h  CustomWidgetCollectionInterface.h  CustomWidgetInterface.h  buttonplugin.cpp  buttonplugin.h  plugin.pro
ShellTest/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
Table/: QtTable.cpp  QtTable.h  QtTableModel.cpp  QtTableModel.h  QtTableProxyModel.cpp  QtTableProxyModel.h  REDEME.md  Table.pro  data.json  main.cpp  res.qrc
build-MovingText-Qt5_14_2_x86-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-MovingText-Qt5_14_2_x86-Debug/debug/: moc_TextMovingWidget.cpp  moc_mainwindow.cpp
build-tabdialog-Qt5_14_2_x86-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-tabdialog-Qt5_14_2_x86-Debug/debug/: moc_TabColseBtn.cpp  moc_tabdialog.cpp  qrc_image.cpp
custom_widgets/micustom/src/table/: table.pri
shadowEffect/: mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  shadowEffect.pro
tabdialog/: README.md  TabColseBtn.cpp  TabColseBtn.h  image.qrc  tabdialog.cpp  tabdialog.h  tabdialog.pro
